k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wof-api
  labels:
    app: wof-api
