k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wof-api
  labels:
    app: wof-api
spec:
  selector:
    app: wof-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
