k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wof-api
  labels:
    app: wof-api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: wof-api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wof-api
                port:
                  number: 80
